add jvmArgs and refresh docs