@@ -50,6 +50,7 @@ tasks {
 
         classpath = project.sourceSets.main.get().runtimeClasspath
         mainClass.set("net.runelite.data.App")
+        jvmArgs("--add-opens=java.base/java.lang.reflect=ALL-UNNAMED")
         args(listOf("npcStats", rootProject.file("./runelite-client/src/main/resources/").absolutePath))
     }
 
@@ -58,6 +59,7 @@ tasks {
 
         classpath = project.sourceSets.main.get().runtimeClasspath
         mainClass.set("net.runelite.data.App")
+        jvmArgs("--add-opens=java.base/java.lang.reflect=ALL-UNNAMED")
         args(listOf("itemStats", rootProject.file("./runelite-client/src/main/resources/").absolutePath))
     }
 
@@ -66,6 +68,7 @@ tasks {
 
         classpath = project.sourceSets.main.get().runtimeClasspath
         mainClass.set("net.runelite.data.App")
+        jvmArgs("--add-opens=java.base/java.lang.reflect=ALL-UNNAMED")
         args(listOf("itemLimits", rootProject.file("./runelite-client/src/main/resources/").absolutePath))
     }
 }
